--- a/IC_Assignment1_KSL-20200118T003334Z-001/IC_Assignment1_KSL/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/IC_Assignment1_KSL-20200118T003334Z-001/IC_Assignment1_KSL/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,20 +112,20 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Maps/CityBlock
-MRUItem1=/Game/Maps/TestMap
+MRUItem0=/Game/Maps/TestMap
+MRUItem1=/Game/Maps/CityBlock
 MRUItem2=/Game/CityBlock
 
 [EditorStartup]
-LastLevel=/Game/Maps/CityBlock
+LastLevel=/Game/Maps/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Block3_001.Block3_001;
 RecentlyPlaced=/Game/Models/Block1_001.Block1_001;
 RecentlyPlaced=/Game/Models/Block2_001.Block2_001;
-RecentlyPlaced=/Game/Models/Block3_001.Block3_001;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Material/MI_WBDesignGrass_KSL.MI_WBDesignGrass_KSL;
 RecentlyPlaced=/Game/Material/MI_WBDesignSideW_KSL.MI_WBDesignSideW_KSL;
@@ -650,6 +650,21 @@ StaticMesh.StaticMesh=True
 StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.Navigation=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Light Profiles=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.RayTracing=True
+DirectionalLight.Tags=True
+DirectionalLight.Activation=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -664,7 +679,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Material
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -678,7 +693,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=1280.000 Y=680.000
-WindowSize=X=1290.000 Y=730.000
+WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -695,7 +710,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport2
 
 [Directories2]
-UNR=../../../../../../Users/scrunnchy/Documents/Asset Pipeline/IC_Assignment1_KSL-20200118T003334Z-001/IC_Assignment1_KSL/Content
+UNR=../../../../../../Users/scrunnchy/Documents/AssetPipeline/IC_Assignment1_KSL-20200118T003334Z-001/IC_Assignment1_KSL/Content/Maps
 BRUSH=../../../../../../Users/U0865157/Documents/Unreal Projects/WhiteBox/Content/
 FBX=../../../../../../Users/U0865157/Documents/Unreal Projects/WhiteBox/Content/
 FBXAnim=../../../../../../Users/U0865157/Documents/Unreal Projects/WhiteBox/Content/
@@ -1413,6 +1428,8 @@ Voice.TimeStamp=2020.01.14-00.45.16
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2020.01.14-00.41.18
 MovieSceneCapture.LastCompileMethod=Unknown
+MeshBuilder.TimeStamp=2020.01.14-00.41.12
+MeshBuilder.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1424,23 +1441,25 @@ MaterialInstanceConstant=
 StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/CityBlock
-MRUItem1=/Game/Models/Block1_001
-MRUItem2=/Game/Models/Block3_001
-MRUItem3=/Game/Material/MI_WBEndGrain_KSL1
-MRUItem4=/Game/Material/MM_WoodBlock_KSL
-MRUItem5=/Game/CityBlock
-MRUItem6=/Game/Material/MI_WBDesignStreet_KSL
-MRUItem7=/Game/Material/MI_WBDesignFlower_KSL
-MRUItem8=/Game/Material/MI_WBDesignRed_KSL_Inst
-MRUItem9=/Game/Material/MI_WBDesignWood_KSL
-MRUItem10=/Game/Material/MM_WBDesign_KSL
-MRUItem11=/Game/Material/MI_WBDesignGrass_KSL
-MRUItem12=/Game/Material/MI_WBDesignSideW_KSL
-MRUItem13=/Game/Material/pink
-MRUItem14=/Game/Material/basic
-MRUItem15=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem16=/Game/pink
+MRUItem0=/Game/Material/Master_Materials/MM_WoodBlock_KSL
+MRUItem1=/Game/Material/MI_WBEndGrain_KSL1
+MRUItem2=/Game/Maps/TestMap
+MRUItem3=/Game/Maps/CityBlock
+MRUItem4=/Game/Models/Block1_001
+MRUItem5=/Game/Models/Block3_001
+MRUItem6=/Game/Material/MM_WoodBlock_KSL
+MRUItem7=/Game/CityBlock
+MRUItem8=/Game/Material/MI_WBDesignStreet_KSL
+MRUItem9=/Game/Material/MI_WBDesignFlower_KSL
+MRUItem10=/Game/Material/MI_WBDesignRed_KSL_Inst
+MRUItem11=/Game/Material/MI_WBDesignWood_KSL
+MRUItem12=/Game/Material/MM_WBDesign_KSL
+MRUItem13=/Game/Material/MI_WBDesignGrass_KSL
+MRUItem14=/Game/Material/MI_WBDesignSideW_KSL
+MRUItem15=/Game/Material/pink
+MRUItem16=/Game/Material/basic
+MRUItem17=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem18=/Game/pink
 
 [AssetEditorToolkitTabLocation]
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
@@ -1458,7 +1477,7 @@ MRUItem16=/Game/pink
 /Game/Material/MI_WBEndGrain_KSL1.MI_WBEndGrain_KSL1=1
 
 [MaterialEditor]
-PrimType=2
+PrimType=1
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
@@ -1631,5 +1650,8 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[MessageLog]
+LastLogListing=MapCheck
 
 
